--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@ Select ONE Additional Feature to Add
         <title>Unit 1 Project</title>
     </head>
     <body>
+        <body style="background-color: rgba(173, 255, 67, 0.61);"></body>
+<h1>Fashion brands I love</h1>
+<ul>
+     <li>Maison margiela</li>
+     <li>Dirk </li>
+</ul>
 
         
     </body>
