--- a/index.html
+++ b/index.html
@@ -19,15 +19,24 @@ Select ONE Additional Feature to Add
     <head>
         <meta charset="utf-8">
         <title>Unit 1 Project</title>
+        <style>
+#myDIV {background: black;
+animation: mymove 7s infinite;
+}
+@keyframes mymove {
+    from {background-color: black;}
+to {background-color: darkred;} }
+</style>
     </head>
     <body>
-        <body style="background-color: rgba(173, 255, 67, 0.61);"></body>
-<h1>Fashion brands I love</h1>
+        <body style="background-color: #10130d;"></body>
+<font color=white><h1>Fashion brands I love</h1></font>
 <ul>
-     <li>Maison margiela</li>
-     <li>Dirk </li>
+     <font color=white><li>Maison margiela</li></font>
+     <font color=white><li>Dirk Bikkemberg</li></font>
+     <font color=white><li>Anne Demeulemeester</li></font>
 </ul>
-
-        
+ <font color=white><h1>My current wishlist</h1></font>
+<div id="myDIV"></div>
     </body>
 </html>
