--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ Select ONE Additional Feature to Add
     </head>
     <body>
 <body style="background-color: #10130d;"></body>
-<em><font color=white><h1>Fashion brands I love</h1></font></em>
+<em><font color=white><h1>Fashion brands I love ♡</h1></font></em>
 <ul>
      <font color=white><li>Maison margiela</li></font>
-     <img src="https://mail.google.com/mail/u/0?ui=2&ik=84eb7b88f8&attid=0.1&permmsgid=msg-a:r2549450320898021672&th=199719c5547a7da5&view=fimg&fur=ip&permmsgid=msg-a:r2549450320898021672&sz=s0-l75-ft&attbid=ANGjdJ_4SxjbDCb9lXNfPJBnhx3S5relGG7EJVrMBrWw0v8N1K-1cD84KY0v9fJdeEbtG1VpJd1HLz26Kbw5TYSm4zyoaweHCPb6JUV8kmS75LTH_4Xh9VCyv21Sfjs&disp=emb&realattid=ii_199719c47c99ece98ed1&zw"
+     <img src="https://ci3.googleusercontent.com/mail-img-att/AGAZnRowRK9ouRXBWy_o_dqfsJ366voPcPdy22hg3ImmmZR9ROr7H8OQiJxiCpWbnuryANJso4OfzrsQAf5aThOzoOjxB2w6klkU818fPb15IpSWU_CEjdwjYUXP1X_oYSP0BlPsTdWzDEjJFwHLOqY1XkLySX3r7HiWT9z7Nj0g2y3rga8JTpS3MocU52pjw-zPSraTVVohOlB4xe2b-qyGf1y0_tqvrFYRitkwOQVE5E5dkGRFBiwnnnS79FILcLYbEi0WKb_ulKuTj8viwIGvX4FXjGGulTSRp40nwfneD8tidhOdkrQQ2kGtBiuve4VuYu1fvMRM9j89-ndHHCpBhZtGV3rV5B_ojsw3jd6hEJ5TIu-wxz7LFM-srrhBPU5yZFDW0WWB_eKTSfHxrL7taHu3FreDMSO5GKNaVo6EAoxgmW0lfDJELJ1syMZpXRtxRZ8dtRezwTOMyeCGRqSEmHRT6llBzWHb4mPrLMcUZ-yFquuu2bs3HJsc5NslIzc2IyHzO9cEAsHI6XSuH4Qzrc8bpCy6ValoiAV304BvamfH4ro87uaPEGs-1nl_pod0SXnJ7lvCvj6CkMWVATyhKMHkNsSsFk2bLB1o0v25OWtyRMVfxfrVag9zfPiL0k-W4yI5hn4YhFnOJkrFCiHI5C1LPuagjRV8uIIyf64VBrUkvzS0MeQ06uJz4nY-zcb7IMTKe9p8SeOzQRWlisoAhAdRz9c7l8kybcT7pwwtSQJbK2wYLnNmMVyfSEjA9BLLKd2Y4OC2cn2kUsxDxuX5n17zp_lWPetZvb6L-mykyCGJWZNK4-sS5qpCL-2Kd0Rh8MSRyftVmIHBsPQ2cGqF73YO3zUAhBpeH6n6NH8JH2pT8xNaF8BLoxg-RndQ2fRySamoVrpbMNmLqu1LYJJbEuO0en4qAIdjTjVuj-9p7gDS0k8tExRDBKqc5So0L6Qo3Zfda5rotRxq6KCM_ZWMv5CfQqg-n9qTrjIVK9eP703bLu8FHpJlK_CDPqVNhWKA0ttxv80d4wOkWGdaOr8cuWhx8m2l6A=s0-l75-ft"
      width="200">
      <font color=white><li>Dirk Bikkemberg</li></font>
      <img src="https://akaibu.co/cdn/shop/files/IMG_3909_4472x.jpg?v=1702865116"
@@ -50,13 +50,19 @@ Select ONE Additional Feature to Add
      <img src=https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2023%2F09%2Fann-demeulemeester-ss24-spring-summer-2024-collection-paris-fashion-week-runway-1.jpg?q=75&w=800&cbr=1&fit=max"
      width="200">
 </ul>
-<em><font color=white><h1>My current wishlist</h1></font></em>
+<em><font color=white><h1>My random current wishlist</h1></font></em>
 <img src="https://mail.google.com/mail/u/0?ui=2&ik=84eb7b88f8&attid=0.1&permmsgid=msg-a:r-2598749666427158996&th=199718febe1935cf&view=fimg&fur=ip&permmsgid=msg-a:r-2598749666427158996&sz=s0-l75-ft&attbid=ANGjdJ-ipLmIpQky3znbw9ZUcNk6q6hxeau7StlGhxgGBDJ4PqZ2GUY2-tGWknrvDloQTYxOnaFP4xgfdCOSp6Lt0mywU9n6ZSYHpKH0u5lM-OdPYA4ZGLnSr2OCfCA&disp=emb&realattid=ii_199718fe00d742604e91&zw"
 width="200">
+<font color=white><li>Alexei Kotenkov leather bag</li></font>
+<h1></h1>
 <img src="https://mail.google.com/mail/u/0?ui=2&ik=84eb7b88f8&attid=0.1&permmsgid=msg-a:r5458726837265024627&th=199718ec20c8f734&view=fimg&fur=ip&permmsgid=msg-a:r5458726837265024627&sz=s0-l75-ft&attbid=ANGjdJ82hcWamHQ6OUeMiJs1nbXzKq21vRzBsayJ9sPFYdZZbzbgv82zBqEsIpubJIUgD3SuFfJf_r1p0z01PiEl2fY8PhtQ2t19c95Ti_iS8TSVwFgJ11FBpr7LCt0&disp=emb&realattid=ii_199718eb59a297bdfe81&zw"
 width="200">
+<font color=white><li>Yasuyuki Ishii leather armor combat boots</li></font>
+<h1></h1>
 <img src="https://mail.google.com/mail/u/0?ui=2&ik=84eb7b88f8&attid=0.1&permmsgid=msg-a:r378293303264852354&th=19971971f2b2d8bd&view=fimg&fur=ip&permmsgid=msg-a:r378293303264852354&sz=s0-l75-ft&attbid=ANGjdJ_QU3JtqGomHdTs2cSQkzcvFCSCs_-EEpkx9N6cxrXdSKh4lbxNLKhkplTxflrLb_PFaM43IWKmxNjY9dFYNl4icocVZ8wruLbp5mkG3NG0r4IX3teRE1k64_M&disp=emb&realattid=ii_199719716d2542473ec1&zw"
 width="200">
+<font color=white><li>Anne demulemeester jacket</li></font>
+<h1></h1> 
 <div id="myDIV"></div>
     </body>
 </html>
