--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Select ONE Additional Feature to Add
 <em><font color=white><h1>Fashion brands I love ♡</h1></font></em>
 <ul>
      <font color=white><li>Maison margiela</li></font>
-     <img src="https://ci3.googleusercontent.com/mail-img-att/AGAZnRowRK9ouRXBWy_o_dqfsJ366voPcPdy22hg3ImmmZR9ROr7H8OQiJxiCpWbnuryANJso4OfzrsQAf5aThOzoOjxB2w6klkU818fPb15IpSWU_CEjdwjYUXP1X_oYSP0BlPsTdWzDEjJFwHLOqY1XkLySX3r7HiWT9z7Nj0g2y3rga8JTpS3MocU52pjw-zPSraTVVohOlB4xe2b-qyGf1y0_tqvrFYRitkwOQVE5E5dkGRFBiwnnnS79FILcLYbEi0WKb_ulKuTj8viwIGvX4FXjGGulTSRp40nwfneD8tidhOdkrQQ2kGtBiuve4VuYu1fvMRM9j89-ndHHCpBhZtGV3rV5B_ojsw3jd6hEJ5TIu-wxz7LFM-srrhBPU5yZFDW0WWB_eKTSfHxrL7taHu3FreDMSO5GKNaVo6EAoxgmW0lfDJELJ1syMZpXRtxRZ8dtRezwTOMyeCGRqSEmHRT6llBzWHb4mPrLMcUZ-yFquuu2bs3HJsc5NslIzc2IyHzO9cEAsHI6XSuH4Qzrc8bpCy6ValoiAV304BvamfH4ro87uaPEGs-1nl_pod0SXnJ7lvCvj6CkMWVATyhKMHkNsSsFk2bLB1o0v25OWtyRMVfxfrVag9zfPiL0k-W4yI5hn4YhFnOJkrFCiHI5C1LPuagjRV8uIIyf64VBrUkvzS0MeQ06uJz4nY-zcb7IMTKe9p8SeOzQRWlisoAhAdRz9c7l8kybcT7pwwtSQJbK2wYLnNmMVyfSEjA9BLLKd2Y4OC2cn2kUsxDxuX5n17zp_lWPetZvb6L-mykyCGJWZNK4-sS5qpCL-2Kd0Rh8MSRyftVmIHBsPQ2cGqF73YO3zUAhBpeH6n6NH8JH2pT8xNaF8BLoxg-RndQ2fRySamoVrpbMNmLqu1LYJJbEuO0en4qAIdjTjVuj-9p7gDS0k8tExRDBKqc5So0L6Qo3Zfda5rotRxq6KCM_ZWMv5CfQqg-n9qTrjIVK9eP703bLu8FHpJlK_CDPqVNhWKA0ttxv80d4wOkWGdaOr8cuWhx8m2l6A=s0-l75-ft"
+     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOjydpLztaD0CYTIcY5ByzFRsLk86nXkLmu0OreZilYZWo30SuMECl47UExUI1dkH9iObMWcX7sey8rNxIttfI_DAPrmbPpquYePQpXF1KRvB2QGarX4Df-KrsD_GJdcajMokWvqZDuCK59I_va_W0iQtgt5bzg35FCXeceAoBhqB0Rxuel3IYEiAUQlN9/s1114/IMG_1213.jpeg"
      width="200">
      <font color=white><li>Dirk Bikkemberg</li></font>
      <img src="https://akaibu.co/cdn/shop/files/IMG_3909_4472x.jpg?v=1702865116"
